--- a/projects/make/utests/utf_baselib_jni/Makefile
+++ b/projects/make/utests/utf_baselib_jni/Makefile
@@ -1,5 +1,9 @@
 include $(MKDIR)/3rd/jdk/1.8.mk
 
+ifneq (win, $(findstring win, $(OS)))
+  LDADD += $(JAVA_HOME)/jre/lib/amd64/server/libjsig.so
+endif
+
 TEST_JNI_SRC_DIR = $(SRCDIR)/utests/utf_baselib_jni
 TEST_JNI_CLASS_DIR = $(abspath $(BLDDIR)/generated/test/jni/classes)
 TEST_JNI_JAR_DIR = $(abspath $(BLDDIR)/utests/utf_baselib_jni/jars)
