jni: fix package name

--- a/projects/make/utests/utf_baselib_jni/Makefile
+++ b/projects/make/utests/utf_baselib_jni/Makefile
@@ -1,7 +1,7 @@
 include $(MKDIR)/3rd/jdk/1.8.mk
 
 ifneq (win, $(findstring win, $(OS)))
-  LDADD += $(JAVA_HOME)/jre/lib/amd64/server/libjsig.so
+  $(utf_baselib_jni_ARTIFACT): LDADD += $(JAVA_HOME)/jre/lib/amd64/server/libjsig.so
 endif
 
 TEST_JNI_SRC_DIR = $(SRCDIR)/utests/utf_baselib_jni
@@ -9,10 +9,10 @@ TEST_JNI_CLASS_DIR = $(abspath $(BLDDIR)/generated/test/jni/classes)
 TEST_JNI_JAR_DIR = $(abspath $(BLDDIR)/utests/utf_baselib_jni/jars)
 TEST_JNI_JAR = $(TEST_JNI_JAR_DIR)/java-bridge.jar
 
-$(TEST_JNI_JAR): $(TEST_JNI_SRC_DIR)/java/src/com/jpmc/swblocks/baselib/test/*.java
+$(TEST_JNI_JAR): $(TEST_JNI_SRC_DIR)/java/src/org/swblocks/baselib/test/*.java
 	mkdir -p $(TEST_JNI_CLASS_DIR)
 	$(JAVAC) -d $(TEST_JNI_CLASS_DIR) $^
 	mkdir -p $(TEST_JNI_JAR_DIR)
-	$(JAR) cvf $@ -C $(TEST_JNI_CLASS_DIR) com
+	$(JAR) cvf $@ -C $(TEST_JNI_CLASS_DIR) org
 
 utf_baselib_jni: $(TEST_JNI_JAR)
