jni: use gradle to build java for jni tests

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ src/libs/java/*/.classpath
 src/libs/java/*/.project
 src/libs/java/*/.settings/
 projects/make/ci-init-env.mk
+java/**/build/
+java/.gradle/
