jni: load site specific configuration from init.gradle if the file exists

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -10,3 +10,8 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version:'4.12'
     }
 }
+
+def initFile = new File(buildscript.sourceFile.getParentFile(), 'init.gradle')
+if (initFile.exists()) {
+    apply from: initFile
+}
