update GCP test certificates to contain better wildcards for the certificate alternative DNS names

--- a/certs/gcp-openssl.conf
+++ b/certs/gcp-openssl.conf
@@ -33,4 +33,5 @@ subjectAltName                 = @alt_names
 
 [alt_names]
 DNS.1                          = *.*.googleusercontent.com
-DNS.2                          = localhost
+DNS.2                          = *.*.*.*.*.googleusercontent.com
+DNS.3                          = localhost
