fix issues with devenv2 and make test self-contained to allow execution of tests outside of build

--- a/projects/make/utests/utf_baselib_jni/Makefile
+++ b/projects/make/utests/utf_baselib_jni/Makefile
@@ -13,7 +13,11 @@ endif
 $(info Building with Gradle = $(GRADLE))
 
 GRADLE_ARGS := --build-file $(JAVADIR)/build.gradle
+BASELIB_JAR_SRC_FILE := $(BLDDIR)/../../java/utf_baselib_jni/build/libs/utf_baselib_jni.jar
+BASELIB_JAR_DEST_DIR := $(BLDDIR)/utests/utf_baselib_jni/utf-baselib-jni-lib
 
 utf_baselib_jni:
 	$(GRADLE) $(GRADLE_ARGS) clean
 	$(GRADLE) $(GRADLE_ARGS) jar
+	@mkdir -p $(BASELIB_JAR_DEST_DIR)
+	@cp $(BASELIB_JAR_SRC_FILE) $(BASELIB_JAR_DEST_DIR)
