--- a/java/build.gradle
+++ b/java/build.gradle
@@ -12,6 +12,6 @@ subprojects {
     }
 
     dependencies {
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testImplementation group: 'junit', name: 'junit', version: '4.12'
     }
 }
