--- a/projects/make/utests/utf_baselib_jni/Makefile
+++ b/projects/make/utests/utf_baselib_jni/Makefile
@@ -13,8 +13,12 @@ endif
 ifneq (win, $(findstring win, $(OS)))
 ifeq (x86, $(ARCH))
   $(utf_baselib_jni_ARTIFACT): LDADD += $(JAVA_HOME)/jre/lib/i386/server/libjsig.so
-else
+endif
+ifeq (x64, $(ARCH))
   $(utf_baselib_jni_ARTIFACT): LDADD += $(JAVA_HOME)/jre/lib/amd64/server/libjsig.so
+endif
+ifeq (a64, $(ARCH))
+  $(utf_baselib_jni_ARTIFACT): LDADD += $(JAVA_HOME)/jre/lib/aarch64/server/libjsig.so
 endif
 endif
 
