--- a/settings/vscode/linux/x64/launch.json
+++ b/settings/vscode/linux/x64/launch.json
@@ -22,6 +22,14 @@
             "program": "${env:HOME}/dev/github/swblocks-baselib/bld/ub20-x64-clang1201-release/apps/bl-tool/bl-tool",
             "args": [ "http", "request", "-s", "-h", "en.wikipedia.org", "--path", "/wiki/Probability_theory" ],
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "(lldb) Launch utf-baselib (debug)",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${env:HOME}/dev/github/swblocks-baselib/bld/ub20-x64-clang1201-debug/utests/utf_baselib/utf-baselib",
+            "args": [ "--log_level=message", "--run_test=BaseLib_URIEncodeDecodeTests" ],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
