update vscode settings

--- a/settings/vscode/linux/x64/launch.json
+++ b/settings/vscode/linux/x64/launch.json
@@ -12,7 +12,7 @@
             "type": "lldb",
             "request": "launch",
             "program": "${env:HOME}/dev/github/swblocks-baselib/bld/ub20-x64-clang1201-debug/apps/bl-tool/bl-tool",
-            "args": [ "http", "request", "-s", "-h", "old.nasdaq.com", "--path", "/screening/companies-by-name.aspx?letter=0&exchange=amex&render=download" ],
+            "args": [ "http", "request", "-s", "-h", "en.wikipedia.org", "--path", "/wiki/Probability_theory" ],
             "cwd": "${workspaceFolder}"
         },
         {
